<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_1"/>
    <EditText
        android:id="@+id/edt_bil1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint_Bilangan_1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bilangan_2"/>
    <EditText
        android:id="@+id/edt_bil2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Hint_Bilangan_2"/>
    <Button
        android:id="@+id/btn_pilih_operasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pilih_operasi"/>
    <TextView
        android:id="@+id/tv_hasil"
        android:layout_weight="1"
        android:textSize="40sp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text=""/>
    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"/>
</LinearLayout>