<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/plus" />

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/minus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_kali"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/kali" />

        <Button
            android:id="@+id/btn_bagi"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:onClick="buttonClick"
            android:text="@string/bagi" />
    </LinearLayout>
</LinearLayout>